--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Cred Manager</string>
     <string name="add_credential">Add Credential</string>
+    <string name="profile">Profile</string>
 </resources>
